# merkle-patricia-trie-demo

./: .env  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  args.ts  build.ts  config.ts  deno.json  lib.exports.ts  main.ts  manifest.ts  mod.js  mod.test.ts  nibbles.ts
bytemap/: buffer.test.ts  buffer.ts  bytemap.ts  decoder.test.ts  deno.json  encoder.ts  mod.ts  mod_test.ts  slab.ts  xxhash32-stream.ts  xxhash32.ts
frontend/: .gitignore  deno.json  index.html  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  useWorker.ts
frontend/src/components/: Cluster.tsx  DataTable.tsx  Editor.module.css  Editor.tsx  MerklePatriciaTrie.tsx
frontend/src/reducers/: common.ts  editor.ts  enumerableMap.ts  index.ts  transientStorage.ts  trie.ts
frontend/src/utils/: cache.ts  encoder.ts  index.d.ts  index.js  runcode.ts  sandbox.ts  typeCheck.ts  useInitOnce.ts  useLazyOnce.ts  usePure.ts
lib/: trie.d.ts  trie.js  trie_bg.wasm  trie_bg.wasm.d.ts  trie_bg.wat
rust/merkle-patricia-trie-js/: Cargo.toml
rust/merkle-patricia-trie-js/src/: bump_allocator.rs  children.rs  hash.rs  host.rs  lib.rs  storage.rs  trie.rs  trie_builder.rs
trie-wasm-bindings/: deno.json  mod.test.ts  mod.ts
trie-wasm-bindings/lib/: trie.d.ts  trie.js  trie_base64.ts  trie_bg.wasm  trie_bg.wasm.d.ts  trie_bg.wat
trie-wasm-bindings/src/: fflate.ts  lib.exports.ts  nibbles.ts  trie.ts
utils/: bytemap.ts  decoder.ts  deno.json  hasher.ts  slab.test.ts  xxhash32.ts
